--- a/themes/pkurg-vesperr/partials/blocks/footer.htm
+++ b/themes/pkurg-vesperr/partials/blocks/footer.htm
@@ -9,7 +9,7 @@ icon = "fa fa-window-minimize"
       <div class="row d-flex align-items-center">
         <div class="col-lg-6 text-lg-left text-center">
           <div class="copyright">
-            &copy; Copyright <strong>Vesperr</strong>. All Rights Reserved
+            &copy; Copyright <strong>Madison Wood Perservers, Inc</strong>. All Rights Reserved
           </div>
           <div class="credits">
             <!-- All the links in the footer should remain intact. -->
