--- a/themes/pkurg-vesperr/partials/blocks/header.htm
+++ b/themes/pkurg-vesperr/partials/blocks/header.htm
@@ -9,13 +9,13 @@ icon = "fa fa-window-maximize"
 
         <div class="logo">
             <h1><a href="#hero"><img src="/themes/pkurg-vesperr/assets/img/mwblue.png"></a></h1>
-            <h1><p style="color:#0F52BA">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Hub App</p></h1>
+            <i><h2><p style="color:#0F52BA">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Hub App</p></h2></i>
             <!-- <a href="index.html"><img src="/themes/pkurg-vesperr/assets/img/logo.png" alt="" class="img-fluid"></a>-->
         </div>
 
         <nav id="navbar" class="navbar">
             <ul>
-                <li><a class="getstarted scrollto" href="#about">Log in</a></li>
+                <li><a class="getstarted scrollto" href="/admin/backend/auth/signin">Log in</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
