--- a/themes/pkurg-vesperr/partials/blocks/services.htm
+++ b/themes/pkurg-vesperr/partials/blocks/services.htm
@@ -4,48 +4,28 @@ category = "Theme Blocks"
 icon = "fa fa-object-group"
 ==
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
-      <div class="container">
-
-        <div class="section-title" data-aos="fade-up">
-          <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit eius consequatur ex aliquid fug</p>
-        </div>
+<section id="more-services" class="more-services">
+    <div class="container">
 
         <div class="row">
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+            <div class="col-md-6 d-flex align-items-stretch">
+                <div class="card" style='background-image: url("/themes/pkurg-vesperr/assets/img/home_treatedlumber.jpg");' data-aos="fade-up" data-aos-delay="100">
+                    <div class="card-body">
+                        <h5 class="card-title"><a href="">Treated Lumber</a></h5>
+                        <p class="card-text">Our treated lumber consists of southern yellow pine, available in dimensions of 2×4-2×12, 8-20 foot, 4×4, 6×6, and 8×8’s.</p>
+                        <div class="read-more"><a href="#"><i class="bi bi-arrow-right"></i> Read More</a></div>
+                    </div>
+                </div>
             </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+            <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+                <div class="card" style='background-image: url("/themes/pkurg-vesperr/assets/img/fence_post_sm.jpg");' data-aos="fade-up" data-aos-delay="200">
+                    <div class="card-body">
+                        <h5 class="card-title"><a href="">Fence Posts</a></h5>
+                        <p class="card-text">Our line of pressure treated pine fence posts are cut to lengths of 7′, 8′, and 10′, ranging in diameter from 3″ to over 8″.</p>
+                        <div class="read-more"><a href="#"><i class="bi bi-arrow-right"></i> Read More</a></div>
+                    </div>
+                </div>
             </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
-              <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
-            </div>
-          </div>
-
         </div>
-
-      </div>
-    </section><!-- End Services Section -->
+    </div>
+</section><!-- End Services Section -->
